--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.19.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^11.5.2",
     "jose": "^5.9.2",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
-    "next": "14.2.8",
+    "next": "^14.2.12",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18.3.5",
