--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
+    "moment": "^2.30.1",
     "next": "^14.2.12",
     "next-themes": "^0.3.0",
     "react": "^18",
