--- a/package.json
+++ b/package.json
@@ -29,9 +29,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
-    "sharp": "^0.33.5",
+    "sonner": "^1.5.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
