--- a/package.json
+++ b/package.json
@@ -1,54 +1,54 @@
 {
-  "name": "tesis3",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
-    "@nextui-org/react": "^2.4.6",
-    "@reduxjs/toolkit": "^2.2.7",
-    "bcryptjs": "^2.4.3",
-    "cloudinary": "^2.5.1",
-    "framer-motion": "^11.5.2",
-    "jose": "^5.9.2",
-    "js-cookie": "^3.0.5",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "lucide-react": "^0.438.0",
-    "moment": "^2.30.1",
-    "next": "^14.2.12",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-redux": "^9.1.2",
-    "sonner": "^1.5.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@prisma/client": "^5.21.1",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.8",
-    "i": "^0.3.7",
-    "npm": "^10.9.0",
-    "postcss": "^8",
-    "prisma": "^5.21.1",
-    "tailwindcss": "^3.4.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
-  }
+   "name": "tesis3",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "prisma": {
+      "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+   },
+   "dependencies": {
+      "@hookform/resolvers": "^3.9.0",
+      "@heroui/react": "2.7.11",
+      "@reduxjs/toolkit": "^2.2.7",
+      "bcryptjs": "^2.4.3",
+      "cloudinary": "^2.5.1",
+      "framer-motion": "^11.5.2",
+      "jose": "^5.9.2",
+      "js-cookie": "^3.0.5",
+      "jsonwebtoken": "^9.0.2",
+      "jwt-decode": "^4.0.0",
+      "lucide-react": "^0.438.0",
+      "moment": "^2.30.1",
+      "next": "^14.2.12",
+      "next-themes": "^0.3.0",
+      "react": "^18",
+      "react-dom": "^18",
+      "react-hook-form": "^7.53.0",
+      "react-redux": "^9.1.2",
+      "sonner": "^1.5.0",
+      "zod": "^3.23.8"
+   },
+   "devDependencies": {
+      "@prisma/client": "^5.21.1",
+      "@types/bcryptjs": "^2.4.6",
+      "@types/js-cookie": "^3.0.6",
+      "@types/jsonwebtoken": "^9.0.7",
+      "@types/node": "^20",
+      "@types/react": "^18.3.5",
+      "@types/react-dom": "^18",
+      "eslint": "^8",
+      "eslint-config-next": "14.2.8",
+      "i": "^0.3.7",
+      "npm": "^10.9.0",
+      "postcss": "^8",
+      "prisma": "^5.21.1",
+      "tailwindcss": "^3.4.1",
+      "ts-node": "^10.9.2",
+      "typescript": "^5"
+   }
 }
