--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
       "dev": "next dev",
       "build": "next build",
       "start": "next start",
-      "lint": "next lint"
+      "lint": "next lint",
+      "clean": "rm -rf .next && rm -rf node_modules && rm -rf package-lock.json && npm install"
    },
    "prisma": {
       "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
