--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -24,10 +24,10 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
     "moment": "^2.30.1",
-    "next": "^14.2.12",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.3.5",
+    "next-themes": "^0.4.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "sonner": "^1.5.0",
@@ -39,10 +39,10 @@
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "eslint": "^8",
-    "eslint-config-next": "14.2.8",
+    "eslint-config-next": "15.3.5",
     "i": "^0.3.7",
     "npm": "^10.9.0",
     "postcss": "^8",
@@ -50,5 +50,9 @@
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
   }
 }
