--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
     "@heroui/react": "2.7.11",
+    "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@reduxjs/toolkit": "^2.2.7",
     "bcryptjs": "^2.4.3",
@@ -26,11 +26,13 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.438.0",
     "moment": "^2.30.1",
+    "motion": "^12.23.12",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.53.0",
+    "react-modal-sheet": "^4.4.0",
     "react-redux": "^9.1.2",
     "sonner": "^1.5.0",
     "zod": "^3.23.8"
