--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "clean": "rm -rf .next && rm -rf node_modules && rm -rf package-lock.json && npm install"
   },
   "prisma": {
@@ -16,9 +17,11 @@
     "@heroui/react": "2.7.11",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
+    "@prisma/client": "^6.14.0",
     "@reduxjs/toolkit": "^2.2.7",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.5.2",
     "jose": "^5.9.2",
     "js-cookie": "^3.0.5",
@@ -27,7 +30,7 @@
     "lucide-react": "^0.438.0",
     "moment": "^2.30.1",
     "motion": "^12.23.12",
-    "next": "15.3.5",
+    "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -35,18 +38,26 @@
     "react-modal-sheet": "^4.4.0",
     "react-redux": "^9.1.2",
     "sonner": "^1.5.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@prisma/client": "^6.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-next": "15.3.5",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "i": "^0.3.7",
     "npm": "^10.9.0",
     "postcss": "^8",
