--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
-    "clean": "rm -rf .next && rm -rf node_modules && rm -rf package-lock.json && npm install"
+    "clean": "rm -rf .next && rm -rf node_modules && rm -rf package-lock.json && npm install",
+    "reset-db": "npx prisma db push --force-reset",
+    "studio": "npx prisma studio"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -17,7 +19,7 @@
     "@heroui/react": "2.7.11",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.16.3",
     "@reduxjs/toolkit": "^2.2.7",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
@@ -61,7 +63,7 @@
     "i": "^0.3.7",
     "npm": "^10.9.0",
     "postcss": "^8",
-    "prisma": "^6.14.0",
+    "prisma": "^6.16.3",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
