--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^6.16.3",
+    "@react-pdf/renderer": "^4.3.1",
     "@reduxjs/toolkit": "^2.2.7",
+    "apexcharts": "^5.3.5",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
@@ -35,10 +37,13 @@
     "next": "^15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
+    "react-csv": "^2.2.2",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.53.0",
     "react-modal-sheet": "^4.4.0",
     "react-redux": "^9.1.2",
+    "recharts": "^3.2.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.23.8"
@@ -49,6 +54,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "19.1.8",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "19.1.6",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
